--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,6 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Categories"
+    url: https://bee0o0a.github.io/categories/
+  - title: "Tags"
+    url: https://bee0o0a.github.io/tags/
