--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "beeeeeeeee0o0"
   avatar           : "/assets/profile.png"
-  bio              : "ver 1.0"
+  bio              : "소소하고 소박한"
   location         : "대한민국"
   email            : "beeeeeeeee0o0@gmail.com"
   links:
