--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Beeeeeeeee0o0"
 description              : "잡식성 블로그 그런데 개발을 곁들인..."
-url                      : "https://bee0o0a.github.io"
+url                      : "https://bee0o0a.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/bee0o0a/bee0o0a.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/favicon.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
