--- a/_config.yml
+++ b/_config.yml
@@ -296,6 +296,8 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
-      share: true
-      related: true
+      comments: false
+      share: false
+      related: false
+      sidebar:
+        nav: "sidebar-category"
